// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Primary story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#081F32",
        "borderColor": "#34C759",
        "borderRadius": 16,
        "borderWidth": 2,
        "height": 50,
        "width": 323,
      },
    ]
  }
  variant="large-dark"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={1}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 50,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
    variant="large-dark"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      buttonVariant="large-dark"
      style={
        [
          {
            "color": "#081F32",
            "fontFamily": "Roboto-Medium",
            "fontSize": 17,
            "letterSpacing": -0.41,
            "lineHeight": 22,
          },
          {},
          [
            {
              "color": "#34C759",
            },
          ],
        ]
      }
      variant="body17-semibold"
    >
      GET THE INSTRUCTIONS
    </Text>
  </RNGestureHandlerButton>
</View>
`;

exports[`renders Secondary story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#34C759",
        "borderColor": "#34C759",
        "borderRadius": 16,
        "borderWidth": 0,
        "height": 50,
        "width": 323,
      },
    ]
  }
  variant="large"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={2}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 50,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
    variant="large"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      buttonVariant="large"
      style={
        [
          {
            "color": "#081F32",
            "fontFamily": "Roboto-Medium",
            "fontSize": 17,
            "letterSpacing": -0.41,
            "lineHeight": 22,
          },
          {},
          [
            {
              "color": "#081F32",
            },
          ],
        ]
      }
      variant="body17-semibold"
    >
      START PROTOTYPE
    </Text>
  </RNGestureHandlerButton>
</View>
`;

exports[`renders Small story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#5856D6",
        "borderColor": "#34C759",
        "borderRadius": 16,
        "borderWidth": 0,
        "height": 28,
        "width": 66,
      },
    ]
  }
  variant="small"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={3}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 28,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
    variant="small"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      buttonVariant="small"
      style={
        [
          {
            "color": "#081F32",
            "fontFamily": "Roboto-Medium",
            "fontSize": 13,
            "letterSpacing": -0.08,
            "lineHeight": 18,
          },
          {},
          [
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
      variant="tagline13-tag"
    >
      APPLY
    </Text>
  </RNGestureHandlerButton>
</View>
`;
